--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,9 @@ flask-wtf==1.1.1
 flask_sqlalchemy==3.0.5
 requests==2.31.0
 pydantic==2.5.3
+flask-socketio==5.3.4
+python-socketio==5.7.2
+eventlet==0.38.2
+flask-migrate==4.1.0
 
 
